Spider+添加产品导出工具

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,10 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/spider?characterEncoding=UTF-8&amp;allowMultiQueries=true
-username=root
-password=123
+#url=jdbc:mysql://localhost:3306/spider?characterEncoding=UTF-8&amp;allowMultiQueries=true
+#username=root
+#password=123
+
+url=jdbc:mysql://192.168.1.238:9696/kingshard?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+
+#url=jdbc:mysql://101.231.86.38:9696/kingshard?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+username=ds
+password=ameyads
